# k8s-models

./: .gitignore  main.py  pyproject.toml
k8s_models/: __init__.py  _generated.py  models.py
k8s_models/cluster/: __init__.py  apiregistration.py  apiregistration_k8s_io.py  apiserverinternal.py  authentication.py  authentication_k8s_io.py  authorization.py  authorization_k8s_io.py  certificates.py  certificates_k8s_io.py  coordination.py  coordination_k8s_io.py  core.py  flowcontrol.py  flowcontrol_apiserver_k8s_io.py  internal_apiserver_k8s_io.py  networking.py  networking_k8s_io.py  node.py  node_k8s_io.py  rbac.py  rbac_authorization_k8s_io.py
k8s_models/config_and_storage/: __init__.py  core.py  storage.py  storage_k8s_io.py
k8s_models/definitions/: __init__.py  admissionregistration_k8s_io.py  apiextensions_k8s_io.py  apiregistration_k8s_io.py  apps.py  authentication_k8s_io.py  authorization_k8s_io.py  autoscaling.py  batch.py  certificates_k8s_io.py  core.py  discovery_k8s_io.py  events_k8s_io.py  flowcontrol_apiserver_k8s_io.py  internal_apiserver_k8s_io.py  meta.py  networking_k8s_io.py  node_k8s_io.py  policy.py  rbac_authorization_k8s_io.py  resource_k8s_io.py  storage_k8s_io.py  unknown.py
k8s_models/metadata/: __init__.py  admissionregistration.py  admissionregistration_k8s_io.py  apiextensions.py  apiextensions_k8s_io.py  apps.py  autoscaling.py  certificates.py  certificates_k8s_io.py  core.py  events.py  events_k8s_io.py  policy.py  resource.py  resource_k8s_io.py  scheduling.py  scheduling_k8s_io.py
k8s_py/: types.py
k8s_py/workloads/: apps.py  (+2 more)
(+604 files in other folders)
