[tool.poetry]
name = "k8s-models"
version = "0.1.1a0"
description = ""
authors = ["eltbus <33374178+eltbus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
