[tool.poetry]
name = "k8s-models"
version = "0.1.0a0"
description = ""
authors = ["eltbus <33374178+eltbus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
ruff = "^0.1.6"
mypy = "^1.7.0"
types-beautifulsoup4 = "^4.12.0.7"
pydeps = "^1.12.17"
inflection = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
